# firebase-crud

./: LICENSE  README.md  setup.cfg
src/firebase_crud/: __init__.py  collection.py
