[metadata]
name = firebase-crud
version = 1.0.0
author = Jeganath PV
author_email = jeganathpv@gmail.com
description = A package to perform crud operations with firebase.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jeganathpv/firebase-crud
project_urls =
    Bug Tracker = https://github.com/jeganathpv/firebase-crud/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    firebase
    crud
    database

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    firebase_admin

[options.packages.find]
where = src